--- a/index6.html
+++ b/index6.html
@@ -70,7 +70,7 @@
       <table>
         <tr>
           <th>Họ và tên</th>
-          <td colspan="2"><input type="text"></td>
+          <td colspan="2"><input type="text" style="width: 250px"></td>
         </tr>
         <tr>
           <th>Email</th>
@@ -134,7 +134,7 @@
             <button type="submit">Gửi thông tin</button>
           </td>
           <td>
-            <button type="reset" style="width: 80px; margin-left: 10px">Nhập lại</button>
+            <button type="reset" style="width: 80px">Nhập lại</button>
           </td>
         </tr>
       </table>
