--- a/Cau-truc-dieu-kien/add.html
+++ b/Cau-truc-dieu-kien/add.html
@@ -8,17 +8,11 @@
 </head>
 <body>
     <script>
-        // let a = parseInt(prompt("a: "));
-        // let b = parseInt(prompt("b: "));
-        // result = (a + b < 4) ? 'Below' : 'Over';
-        // alert(result);
+        let a = parseInt(prompt("a: "));
+        let b = parseInt(prompt("b: "));
+        result = (a + b < 4) ? 'Below' : 'Over';
+        alert(result);
 
-        let login = prompt('')
-        let message = (login == 'Emplove')?
-                        'hello':(login == 'Director')?
-                        'Greetings':(login == '')?
-                        'No login': ''
-        alert(message);
 
     </script>
 </body>
