--- a/Cau-truc-dieu-kien/bmi.html
+++ b/Cau-truc-dieu-kien/bmi.html
@@ -12,13 +12,13 @@
         let height = parseFloat(prompt("Chiều cao của bạn"))
         let bmi = weight / (height * height);
         if (bmi < 18.5)
-            document.write("Underweight");
+           alert("Underweight");
         else if (bmi < 25.0 && bmi >= 18.5)
-            document.write("Normal");
+           alert("Normal");
         else if (bmi >= 25 && bmi < 30.0)
-            document.write("Overweight");
+           alert("Overweight");
         else
-            document.write("Obese");
+           alert("Obese");
     </script>
 </body>
 </html>
