--- a/Cau-truc-dieu-kien/luyen-tap1.html
+++ b/Cau-truc-dieu-kien/luyen-tap1.html
@@ -9,46 +9,48 @@
 <body>
     <script>
 
-        KIỂM TRA A CÓ CHIA HẾT CHO B
-        let a = +prompt('Nhập vào số a')
-        let b = +prompt('Nhập vào số b')
-        if(a % b == 0){
-            alert('a chia hết cho b')
-        } else {
-            alert('a không chia hết cho b')
-        }
+        // KIỂM TRA A CÓ CHIA HẾT CHO B
+        // let a = +prompt('Nhập vào số a')
+        // let b = +prompt('Nhập vào số b')
+        // if(a % b == 0){
+        //     alert('a chia hết cho b')
+        // } else {
+        //     alert('a không chia hết cho b')
+        // }
 
 
-        KIỂM TRA TUỔI HỌC LỚP 10
-        let tuoi = +prompt('Nhập tuổi')
-        if(tuoi >= 15){
-            alert('Đủ điều kiện học lớp 10')
-        } else {
-            alert('không đủ điều kiện học lớp 10')
-        }
+        // KIỂM TRA TUỔI HỌC LỚP 10
+        // let tuoi = +prompt('Nhập tuổi')
+        // if(tuoi >= 15){
+        //     alert('Đủ điều kiện học lớp 10')
+        // } else {
+        //     alert('không đủ điều kiện học lớp 10')
+        // }
 
-        KIỂM TRA SỐ NHẬP VÀO
-        let a = +prompt('Nhập số bất kì')
-        if(a > 0){
-            alert('a lớn hơn 0')
-        } else if (a < 0){
-            alert('a nhỏ hơn 0')
-        } else {
-            alert('a bằng 0')
-        }
+        // KIỂM TRA SỐ NHẬP VÀO
+        // let a = +prompt('Nhập số bất kì')
+        // if(a > 0){
+        //     alert('a lớn hơn 0')
+        // } else if (a < 0){
+        //     alert('a nhỏ hơn 0')
+        // } else {
+        //     alert('a bằng 0')
+        // }
 
 
-        SỐ LỚN NHẤT
-        let a = +prompt('Nhập vào số a')
-        let b = +prompt('Nhập vào số b')
-        let c = +prompt('Nhập vào số c')
-        if (a > b && a > c){
-            alert('a là số lớn nhất')
-        } else if (b > c && b > a){
-            alert('b là số lớn nhất')
-        } else {
-            alert('c là số lớn nhất')
-        }
+        // SỐ LỚN NHẤT
+        // let a = +prompt('Nhập vào số a')
+        // let b = +prompt('Nhập vào số b')
+        // let c = +prompt('Nhập vào số c')
+        // let max = a;
+        // if(max < b){
+        //     max = b;
+        // }
+        // if(max <c){
+        //     max = c;
+        // }
+        // alert(max)
+        
 
 
     </script>
