--- a/mang/faking-text.html
+++ b/mang/faking-text.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h2>Type anthing slowly</h2>
+    <h2>Type anything slowly</h2>
            
                 <textarea name="text" id="input1" cols="40" rows="10" onkeyup="fakingText();"></textarea>
             
